--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,8 @@
-<p id="notice"><%= notice %> </p>
-<h1>Perfil: <%= @user.full_name %> </h1>
-<ul>
-  <li>Localização: <%= @user.location %> </li>
-  <li>Biografia: <%= @user.bio %> </li>
-</ul>
-<%= link_to 'Editar Perfil', edit_user_path(@user) %>
+<h1><%= t '.title', :user_name => @user.full_name %> </h1>
 
+<ul>
+  <li><%= t '.location', :location => @user.location %> </li>
+  <li><%= t '.bio', :bio => @user.bio %> </li>
+</ul>
+
+<%= link_to t('.edit'), edit_user_path(@user) %>
